--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/swiper": "^5.4.3",
     "clsx": "^2.1.0",
     "framer-motion": "^11.18.2",
+    "googleapis": "^149.0.0",
     "gsap": "^3.13.0",
     "lottie-react": "^2.4.1",
     "next": "^15.1.8",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.18",
